--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -4,8 +4,6 @@
     --color-gray: #3e3e3e;
     --color-lightgray: #3e3e3e55;
     --color-pink: #ff059f;
-    /* --color-pink: #ff015e; */
-    /* --color-pink: #ff1a6e; */
 }
 
 @font-face {
@@ -36,10 +34,6 @@
 
 body {
     font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
-    text-size-adjust: auto;
-    -webkit-text-size-adjust: auto;
-    -ms-text-size-adjust: auto;
-    -moz-text-size-adjust: auto;
 }
 
 h1, h2 {
@@ -48,7 +42,7 @@ h1, h2 {
 }
 
 p {
-    font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif;
+    /* font-family: 'Nunito', 'Times New Roman', Georgia, sans-serif; */
     font-size: 22px;
     text-align: center;
     color: var(--color-gray);
@@ -72,8 +66,8 @@ section {
     align-self: center;
     justify-content: center;
     z-index: 9999;
-    width: 100vw;
-    height: 75vh;
+    /* width: 100vw;
+    height: 75vh; */
     background-color: transparent;
 }
 
@@ -85,6 +79,7 @@ header {
     top: 0;
     left: 0;
     margin-top: 5vh;
+    margin-bottom: 7.5vh;
     width: 100vw;
     background-color: var(--color-white);
 }
@@ -189,6 +184,10 @@ nav a {
     animation: slide-in-bottom 1.1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 750ms both;
 }
 
+#landing-header {
+    font-size: 42px;
+}
+
 #welcome h1, #welcome p {
     padding-left: 100px;
     padding-right: 100px;
@@ -209,14 +208,15 @@ nav a {
 }
 
 #welcome img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 50%;
+    max-height: 50%;
 }
 
 footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     gap: 5vw;
     padding: 1%;
     background-color: var(--color-lightgray);
@@ -234,7 +234,7 @@ footer {
     transition: transform var(--animation-time) var(--movement-curve), filter var(--animation-time) var(--movement-curve2);
 }
 
-.link-icon:hover, .link-icon:active {
+.link-icon:hover {
     transform: scale(1.75);
     -webkit-transform: scale(1.75);
     -moz-transform: scale(1.75);
@@ -317,15 +317,84 @@ footer {
 
 /* Desktop */
 @media screen and (min-width: 1024px) {
-
-
 }
 
 /* Tablet Portrait */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     #landing-img {
-        max-width: 100%;
-        max-height: 100%;
+        max-width: 150%;
+        max-height: 150%;
+    }
+
+    #welcome #landing-img {
+        /* max-width: 25vw;
+        max-height: 25vh; */
+        scale: 1;
+    }
+
+    #welcome #welcome-header {
+        font-size: 14px;
+    }
+    #welcome p {
+        font-size: 18px;
+    }
+
+    #scroll-nav {
+        display: flex;
+        justify-content: flex-start;
+        width: 50vw;
+        gap: 15px;
+        font-weight: bolder;
+        padding-left: 3.5%;
+    }
+    
+    #scroll-nav a {
+        display: inline-block;
+        position: relative;
+        padding: 0.3rem;
+        margin: -0.25rem;
+        justify-content: center;
+        color: var(--color-black);
+        background-color: transparent;
+        font-size: 9px;
+    }
+    
+    #link-nav {
+        justify-content: flex-end;
+        display: flex;
+        align-items: center;
+        width: 50vw;
+        gap: 5px;
+        padding-right: 3.5%;
+    }
+    
+    #link-nav div {
+        display: flex;
+        align-items: center;
+        background-color: transparent;
+    
+    }
+
+    footer div img {
+        align-items: center;
+    }
+    
+    #link-nav img {
+        vertical-align: middle;
+    }
+    
+    .navbar-link {
+        transition: box-shadow 0.35s cubic-bezier(0.680, -0.550, 0.265, 1.550), transform 0.35s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+    }
+    
+    .navbar-link:hover, .navbar-link:active {
+        transform: translateX(-6px) translateY(6px);
+        box-shadow: 1px -1px var(--color-pink), 2px -2px var(--color-pink), 3px -3px var(--color-pink), 4px -4px var(--color-gray),
+                    5px -5px var(--color-gray), 6px -6px var(--color-gray);
+    }
+
+    footer {
+        padding: 1vw 1vh;
     }
 
 }
@@ -337,11 +406,6 @@ footer {
         max-height: 100%;
     }
 
-
-}
-
-/* Mobile Portrait */
-@media screen and (max-width: 480px) {
     #welcome #landing-img {
         /* max-width: 25vw;
         max-height: 25vh; */
@@ -358,11 +422,103 @@ footer {
 
 }
 
+/* Mobile Portrait */
+@media screen and (max-width: 480px) {
+    #welcome #landing-img {
+        scale: 0.75;
+    }
+    
+    #welcome p {
+        font-size: 14px;
+        padding: 0 20px;
+    }
+
+    #welcome h1 {
+        font-size: 26px;
+    }
+    
+    #scroll-nav {
+        display: flex;
+        justify-content: flex-start;
+        width: 50vw;
+        gap: 15px;
+        font-weight: bolder;
+        padding-left: 3.5%;
+    }
+    
+    #scroll-nav a {
+        display: inline-block;
+        position: relative;
+        padding: 0.3rem;
+        margin: -0.25rem;
+        justify-content: center;
+        color: var(--color-black);
+        background-color: transparent;
+        font-size: 9px;
+    }
+    
+    #link-nav {
+        justify-content: flex-end;
+        display: flex;
+        align-items: center;
+        width: 50vw;
+        gap: 5px;
+        padding-right: 3.5%;
+    }
+    
+    #link-nav div {
+        display: flex;
+        align-items: center;
+        background-color: transparent;
+    
+    }
+
+    footer div img {
+        align-items: center;
+    }
+    
+    #link-nav img {
+        vertical-align: middle;
+    }
+
+    .link-icon {
+        /* width: 75%; */
+        /* height: 75%; */
+    }
+    
+    .navbar-link {
+        transition: box-shadow 0.35s cubic-bezier(0.680, -0.550, 0.265, 1.550), transform 0.35s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+    }
+    
+    .navbar-link:hover, .navbar-link:active {
+        transform: translateX(-6px) translateY(6px);
+        box-shadow: 1px -1px var(--color-pink), 2px -2px var(--color-pink), 3px -3px var(--color-pink), 4px -4px var(--color-gray),
+                    5px -5px var(--color-gray), 6px -6px var(--color-gray);
+    }
+
+    footer {
+        padding: 1vw 1vh;
+    }
+}
+
 /* Mobile Landscape*/
 @media screen and (max-width: 640px) and (orientation: landscape) {
     #landing-img {
         max-width: 100%;
         max-height: 100%;
+    }
+
+    #welcome #landing-img {
+        /* max-width: 25vw;
+        max-height: 25vh; */
+        scale: 0.5;
+    }
+
+    #welcome #welcome-header {
+        font-size: 12px;
+    }
+    #welcome p {
+        font-size: 14px;
     }
 
 }
